--- a/templates/dataView.html
+++ b/templates/dataView.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1>{{title}}</h1>
+  <h1 id="data-view-title">{{title}}</h1>
   <table id="data-peserta">
     <tr>
       <th>No</th>
