update tampilan input data

--- a/templates/dataView.html
+++ b/templates/dataView.html
@@ -11,7 +11,7 @@
     <tr>
       <th>No</th>
       <th>Nama</th>
-      <th>Alamat</th>
+      <th>Email</th>
       <th>Telepon</th>
       <th>Swing</th>
       <th>Damage</th>
