--- a/public/style.css
+++ b/public/style.css
@@ -158,28 +158,37 @@ h1#input-title {
 }
 
 input#name {
-    margin-left: 20px;
+    width: 375px;
+    height: 50px;
+    margin-left: 25px;
     margin-bottom: 5px;
 }
 
 input#swing {
-    margin-left: 18px;
+    width: 375px;
+    height: 50px;
+    margin-left: 23px;
     margin-bottom: 5px
 }
 
 input#damage {
+    width: 375px;
+    height: 50px;
     margin-bottom: 5px;
+    margin-left: 7px;
 }
 
 input#address {
     width: 375px;
     height: 50px;
-    margin-left: 10px;
+    margin-left: 28px;
     margin-bottom: 5px
 }
 
 input#phone {
-    margin-left: 5px;
+    width: 375px;
+    height: 50px;
+    margin-left: 10px;
     margin-bottom: 30px;
 }
 
@@ -191,5 +200,5 @@ button#input-data-button {
     shadow: none;
     border: none;
     font-size: 14px;
-    margin-left: 343px
+    margin-left: 347px
 }
